--- a/web_nuxt/src/assets/scss/style.scss
+++ b/web_nuxt/src/assets/scss/style.scss
@@ -165,3 +165,22 @@ ul {
 	--max-width-base: #{var.$max-width-base};
 	--max-width-wide: #{var.$max-width-wide};
 }
+
+// Nuxt DOM スタイル
+#__nuxt {
+	position: relative;
+	height: 100%;
+	overflow-y: auto;
+}
+
+// ComfyUI の要素を非表示にする
+body {
+	> [class^="comfy"] {
+		display: none;
+
+		&._show {
+			pointer-events: auto;
+			display: block;
+		}
+	}
+}
