--- a/web_nuxt/src/assets/scss/style.scss
+++ b/web_nuxt/src/assets/scss/style.scss
@@ -169,13 +169,16 @@ ul {
 // Nuxt DOM スタイル
 #__nuxt {
 	position: relative;
-	height: 100%;
+	width: 100%;
 	overflow-y: auto;
+	background-color: var.$light;
 }
 
 // ComfyUI の要素を非表示にする
 body {
-	> [class^="comfy"] {
+	> [class^="comfy"],
+	#vue-app,
+	.graph-canvas-container {
 		display: none;
 
 		&._show {
