feat: dev で comfyui の表示トグル機能を追加して開発しやすさ改善

--- a/web_nuxt/src/assets/scss/style.scss
+++ b/web_nuxt/src/assets/scss/style.scss
@@ -169,6 +169,7 @@ ul {
 // Nuxt DOM スタイル
 #__nuxt {
 	position: relative;
+	z-index: 1000;
 	width: 100%;
 	overflow-y: auto;
 	background-color: var.$light;
