feat: ComfyUI Manager で追加されるフッターメニューの表示管理を追加

--- a/web_nuxt/src/assets/scss/style.scss
+++ b/web_nuxt/src/assets/scss/style.scss
@@ -179,7 +179,8 @@ ul {
 body {
 	> [class^="comfy"],
 	#vue-app,
-	.graph-canvas-container {
+	.graph-canvas-container,
+	.pysssss-image-feed {
 		display: none;
 
 		&._show {
